# scs-sdk-plugin

./: CMakeLists.txt  README.md  changelog.md  update.md
scs-client/C#/SCSSdkClient/: SCSSdkClient.csproj  SCSSdkConvert.cs  SCSSdkTelemetry.cs
scs-client/C#/SCSSdkClient.Demo/SCSSdkClient.Demo/: SCSSdkClientDemo.Designer.cs  SCSSdkClientDemo.cs
scs-client/C#/SCSSdkClient/Object/: SCSTelemetry.GamePlayEvents.cs
scs-client/Python/: scssdk.py
scs-telemetry/inc/: log.hpp  scs-telemetry-common.hpp  scs_config_handlers.hpp  scs_gameplay_event_handlers.hpp  sharedmemory.hpp
scs-telemetry/src/: log.cpp  scs_config_handlers.cpp  scs_gameplay_event_handlers.cpp  scs_telemetry.cpp  sharedmemory.cpp  test.cpp
scs-telemetry/vs2012/: scs-telemetry.vcxproj
scs_sdk_1_14/examples/input/: Makefile  input.cpp  input.def  input.sln  input.vcproj
scs_sdk_1_14/examples/input_semantical/: Makefile  input_semantical.cpp  input_semantical.def  input_semantical.sln  input_semantical.vcproj
